--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/s3-request-presigner": "^3.750.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.8",
     "jsonwebtoken": "^9.0.2",
