--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,5 +1,6 @@
 - "!include public_appointments.yaml"
 - "!include public_practice_invites.yaml"
 - "!include public_practice_preferences.yaml"
+- "!include public_practice_reviews.yaml"
 - "!include public_practices.yaml"
 - "!include public_users.yaml"
