Add practice_with_distance and get_nearby_practices

--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -3,4 +3,5 @@
 - "!include public_practice_preferences.yaml"
 - "!include public_practice_reviews.yaml"
 - "!include public_practices.yaml"
+- "!include public_practices_with_distance.yaml"
 - "!include public_users.yaml"
